feat: implement comment v1 controller
